[#589] Fix icon alignment

--- a/frontend/src/modules/flexible-forms/styles.scss
+++ b/frontend/src/modules/flexible-forms/styles.scss
@@ -586,3 +586,8 @@
     padding-left: 35px;
   }
 }
+.custom-child-title,
+.custom-step-title {
+  display: flex;
+  align-items: center;
+}
